# bpc-project

./: .gitignore  CLAUDE.md  README.md  Train_HSB_DE_BPE_Example.ipynb  eval.sh  eval_bpe.sh  eval_morfessor.sh  example_output_prepare.txt  main.py  prepare.sh  pyproject.toml  train.sh  train_bpe_de-hsb.sh  train_bpe_hsb-de.sh  train_morfessor_hsb-de.sh
RNNTagger/: README.txt
RNNTagger/PyNMT/: Data.py  nmt-translate.py
RNNTagger/PyRNN/: Data.py  rnn-annotate.py
RNNTagger/cmd/: rnn-tagger-german.sh  rnn-tagger-upper-sorbian.sh
RNNTagger/lib/PyNMT/: german.hyper  german.io  upper-sorbian.hyper  upper-sorbian.io
RNNTagger/lib/PyRNN/: german.io  upper-sorbian.hyper  upper-sorbian.io
RNNTagger/lib/Tokenizer/: danish-abbreviations  diachronic-icelandic-abbreviations  early-new-high-german-abbreviations  estonian-abbreviations  georgian-abbreviations  greek-abbreviations  hindi-abbreviations  hungarian-abbreviations  icelandic-abbreviations  indonesian-abbreviations  latin-abbreviations  middle-dutch-abbreviations  middle-english-abbreviations  middle-french-abbreviations  middle-high-german-abbreviations  norwegian-abbreviations  old-english-abbreviations  old-french-abbreviations  slovenian-abbreviations  (+4 more)
RNNTagger/scripts/: paste.py  paste2.py  simple_tokenize.pl
dataset/original/: dev.de  dev.hsb  test.de  test.hsb
presentations/: data_prep_and_baseline.aux  data_prep_and_baseline.fdb_latexmk  data_prep_and_baseline.fls  data_prep_and_baseline.nav  data_prep_and_baseline.out  data_prep_and_baseline.tex  data_prep_and_baseline.toc  data_prep_and_baseline.vrb
