[project]
name = "bpc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fairseq",
    "morfessor>=2.0.6",
    "sacremoses>=0.1.1",
    "subword-nmt>=0.3.8",
    "torch>=2.0,<2.4",
    "wandb>=0.20.1",
]

[tool.uv.sources]
fairseq = { git = "https://github.com/facebookresearch/fairseq.git", rev = "v0.12.1" }
